--- a/locale/da/LC_MESSAGES/messages.po
+++ b/locale/da/LC_MESSAGES/messages.po
@@ -3,16 +3,16 @@ msgstr ""
 "Project-Id-Version: Webpay\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-01-30 19:53+0000\n"
-"PO-Revision-Date: 2015-01-16 22:10+0100\n"
-"Last-Translator: Jørgen Rasmussen <joergenr@stofanet.dk>\n"
+"PO-Revision-Date: 2015-01-30 20:33+0000\n"
+"Last-Translator: Jørgen   <joergenr@stofanet.dk>\n"
 "Language-Team: MozillaDanmark\n"
 "Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.7.3\n"
-"X-POOTLE-MTIME: 1412111657.0\n"
+"X-Generator: Pootle 2.5.0\n"
+"X-POOTLE-MTIME: 1422650007.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16 public/js/lib/cancel.js:18
 msgid "Payment cancelled."
@@ -219,7 +219,7 @@ msgstr "De indsendte pinkode-data var ugyldige."
 
 #: public/js/error-codes.js:19
 msgid "No valid user found whilst attempting to create your PIN"
-msgstr "Ingen gyldig bruger fundet under forsøget på at oprette din pinkode."
+msgstr "Ingen gyldig bruger fundet under forsøget på at oprette din pinkode"
 
 #: public/js/error-codes.js:20
 msgid "Permission denied attempting to create your PIN."
@@ -235,15 +235,15 @@ msgstr "Der opstod en uventet fejl da din pinkode blev kontrolleret."
 
 #: public/js/error-codes.js:23
 msgid "No valid user found whilst checking your PIN"
-msgstr "Ingen gyldig bruger fundet da din pinkode blev kontrolleret."
+msgstr "Ingen gyldig bruger fundet da din pinkode blev kontrolleret"
 
 #: public/js/error-codes.js:24
 msgid "Permission denied attempting to check your PIN"
-msgstr "Tilladelse nægtet under forsøget på at kontrollere din pinkode."
+msgstr "Tilladelse nægtet under forsøget på at kontrollere din pinkode"
 
 #: public/js/error-codes.js:25
 msgid "The request timed out whilst trying to check your PIN"
-msgstr "Forespørgslen fik time out under forsøget på at kontrollere din pinkode."
+msgstr "Forespørgslen fik time out under forsøget på at kontrollere din pinkode"
 
 #: public/js/error-codes.js:26
 msgid "An unexpected error occurred when resetting your PIN."
@@ -251,7 +251,7 @@ msgstr "Der opstod en uventet fejl da din pinkode blev nulstillet."
 
 #: public/js/error-codes.js:28
 msgid "No valid user found whilst attempting to reset your PIN"
-msgstr "Ingen gyldig bruger fundet under forsøget på at nulstille din pinkode."
+msgstr "Ingen gyldig bruger fundet under forsøget på at nulstille din pinkode"
 
 #: public/js/error-codes.js:29
 msgid "Permission denied attempting to reset your PIN."
@@ -344,13 +344,12 @@ msgstr "Ikke dig?"
 
 #: public/js/views/super-simulate.js:44
 msgid "Super Simulate"
-msgstr ""
+msgstr "Super-simuler"
 
 #: templates/super-simulate.html:8
-#, fuzzy
 msgid "Simulate Something?"
-msgstr "Simuler betaling"
+msgstr "Simuler noget?"
 
 #: templates/super-simulate.html:11
 msgid "No network simulation"
-msgstr ""
+msgstr "Ingen netværkssimulering"
