--- a/locale/es/LC_MESSAGES/messages.po
+++ b/locale/es/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-01-30 19:53+0000\n"
-"PO-Revision-Date: 2014-10-02 14:20+0000\n"
+"PO-Revision-Date: 2015-02-02 18:15+0000\n"
 "Last-Translator: Inma <inma.barrios@mozilla-hispano.org>\n"
 "Language-Team: none\n"
 "Language: es\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1412259618.0\n"
+"X-POOTLE-MTIME: 1422900932.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16 public/js/lib/cancel.js:18
 msgid "Payment cancelled."
@@ -323,36 +323,35 @@ msgstr "Al continuar, aceptas nuestros <a %(terms)s>Términos</a> y <a %(privacy
 
 #: public/js/views/force-auth.js:91 public/js/views/reset-start.js:68 public/js/views/force-auth.js:90 public/js/views/reset-start.js:70 public/js/views/force-auth.js:88 public/js/views/login.js:18
 #: public/js/views/reset-start.js:55
-#, fuzzy
 msgid "Connecting to Firefox Accounts"
-msgstr "Conectando con Mozilla Persona"
+msgstr "Conectando con Firefox Accounts"
 
 #: templates/reset-start.html:8 templates/reset-start.html:7
-#, fuzzy
 msgid "Are you sure you want to reset your PIN? You must sign in to Firefox Accounts to reset your PIN."
-msgstr "¿Seguro que deseas restablecer tu PIN? Debes identificarte con Mozilla Persona para poder restablecerlo."
+msgstr ""
+"¿Seguro que deseas restablecer tu PIN? Debes identificarte con Firefox "
+"Accounts para poder restablecerlo."
 
 #: public/js/views/page.js:34
 msgid "Logging out"
-msgstr ""
+msgstr "Saliendo"
 
 #: templates/signout.html:9
 msgid "You are signed in as:"
-msgstr ""
+msgstr "Te has identificado como:"
 
 #: templates/signout.html:11
 msgid "Not you?"
-msgstr ""
+msgstr "¿No eres tú?"
 
 #: public/js/views/super-simulate.js:44
 msgid "Super Simulate"
-msgstr ""
+msgstr "Super Simulate"
 
 #: templates/super-simulate.html:8
-#, fuzzy
 msgid "Simulate Something?"
-msgstr "Simular pago"
+msgstr "¿Simular algo?"
 
 #: templates/super-simulate.html:11
 msgid "No network simulation"
-msgstr ""
+msgstr "Ninguna simulación de red"
