--- a/locale/hi_IN/LC_MESSAGES/messages.po
+++ b/locale/hi_IN/LC_MESSAGES/messages.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-01-30 19:53+0000\n"
-"PO-Revision-Date: 2014-10-19 05:20+0000\n"
+"PO-Revision-Date: 2015-02-11 16:59+0000\n"
 "Last-Translator: Umesh <umesh.agarwal1@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: hi_IN\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1413696034.0\n"
+"X-POOTLE-MTIME: 1423673962.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16 public/js/lib/cancel.js:18
 msgid "Payment cancelled."
@@ -323,36 +323,33 @@ msgstr "आगे बढ़ने से आप हमसे सहमत है
 
 #: public/js/views/force-auth.js:91 public/js/views/reset-start.js:68 public/js/views/force-auth.js:90 public/js/views/reset-start.js:70 public/js/views/force-auth.js:88 public/js/views/login.js:18
 #: public/js/views/reset-start.js:55
-#, fuzzy
 msgid "Connecting to Firefox Accounts"
-msgstr "परसोना से कनेक्ट हो रहा है"
+msgstr "Firefox से कनेक्ट हो रहा है"
 
 #: templates/reset-start.html:8 templates/reset-start.html:7
-#, fuzzy
 msgid "Are you sure you want to reset your PIN? You must sign in to Firefox Accounts to reset your PIN."
 msgstr "क्या आप अपना PIN रीसेट करना चाहते हैं? अपना PIN रीसेट करने के लिए परसोना में साइन इन करना होगा."
 
 #: public/js/views/page.js:34
 msgid "Logging out"
-msgstr ""
+msgstr "बाहर प्रवेश"
 
 #: templates/signout.html:9
 msgid "You are signed in as:"
-msgstr ""
+msgstr "आपने साइन इन है ऐसै:"
 
 #: templates/signout.html:11
 msgid "Not you?"
-msgstr ""
+msgstr "तुम नहीं?"
 
 #: public/js/views/super-simulate.js:44
 msgid "Super Simulate"
-msgstr ""
+msgstr "सुपर अनुकरण"
 
 #: templates/super-simulate.html:8
-#, fuzzy
 msgid "Simulate Something?"
-msgstr "भुगतान अनुरूपित करें"
+msgstr "भुगतान अनुरूपित करें?"
 
 #: templates/super-simulate.html:11
 msgid "No network simulation"
-msgstr ""
+msgstr "कोई नेटवर्क अनुकरण नही"
